--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ celerybeat-schedule
 
 # Environments
 .env
+.env.example
 .venv
 env/
 venv/
@@ -138,4 +139,8 @@ Desktop.ini
 # Project specific
 *.jpg
 *.png
-*.jpeg 
+*.jpeg
+
+# Firebase credentials
+serviceAccountKey.json
+*firebase*credentials*.json 
