--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ python-dotenv==1.0.0
 google-generativeai==0.3.1
 pillow==10.0.0
 schedule==1.2.0
-requests==2.31.0 
+requests==2.31.0
+firebase-admin==6.2.0 
