--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,7 +2,8 @@ name: Run Twitter Bot
 
 on:
   schedule:
-    - cron: '0 */4 * * *'  # Run every 4 hours
+    - cron: '0 0,3,6,9,12,15,18,21 * * *'  # At hour 0,3,6,9,12,15,18,21
+    - cron: '30 1,4,7,10,13,16,19,22 * * *'  # At 1:30,4:30,7:30,10:30,13:30,16:30,19:30,22:30
   workflow_dispatch:  # Allow manual triggers
 
 jobs:
@@ -18,6 +19,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Create service account key file
+        run: |
+          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > serviceAccountKey.json
       - name: Run bot
         env:
           API_KEY: ${{ secrets.API_KEY }}
@@ -27,4 +31,4 @@ jobs:
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          python bot.py --task all 
+          python bot.py --task post 
