--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ google-generativeai==0.3.1
 pillow==10.0.0
 schedule==1.2.0
 requests==2.31.0
-firebase-admin==6.2.0 
+firebase-admin==6.2.0
+google-cloud-firestore==2.11.1
+google-cloud-storage==2.10.0 
