--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -31,5 +31,6 @@ jobs:
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
         run: |
           python run_bot.py --task post 
