--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,8 +2,7 @@ name: Run Twitter Bot
 
 on:
   schedule:
-    - cron: '0 0,3,6,9,12,15,18,21 * * *'  # At hour 0,3,6,9,12,15,18,21
-    - cron: '30 1,4,7,10,13,16,19,22 * * *'  # At 1:30,4:30,7:30,10:30,13:30,16:30,19:30,22:30
+    - cron: '0 */2 * * *'
   workflow_dispatch:  # Allow manual triggers
 
 jobs:
